# Backend_Learning__ShiftTest

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
scripts/: init.sh
src/: main.py
src/app/: main.py
src/core/: __init__.py
src/core/auth/: __init__.py  auth_dependencies.py  auth_dto.py  auth_router.py  auth_service.py  auth_utils.py  user_dto.py  user_repository.py
src/core/configs/: __init__.py  logging.py  settings.py
src/core/database/: __init__.py  base_entity.py  database_dependencies.py  database_dto.py  database_router.py  database_service.py  database_session.py  postgres.py
src/core/database/migrations/: __init__.py  env.py  script.py.mako
src/core/database/migrations/versions/: 000458aa9b3e_add_ondelete_strategy_for_slots.py  31f1d9327eb7_create_rooms_table.py  3a60ac7c0612_create_slot_records.py  4077c5906b07_create_room_records.py  5e9dbfdae478_create_slots_table.py  75a431c456b7_create_users_table.py  9df13dc8e1d9_add_description_field_to_rooms_table.py  b9468cc1e145_change_create_and_update_at_fields_.py  ba00bf963f77_create_bookings_table.py
src/modules/: __init__.py
src/modules/booking/: __init__.py  booking_dto.py  booking_entity.py  booking_repository.py  booking_router.py  booking_service.py  booking_utils.py
src/modules/room/: __init__.py  room_dependencies.py  room_dto.py  room_entity.py  room_repository.py  room_router.py  room_service.py  room_utils.py
src/modules/slot/: __init__.py  slot_dependencies.py  slot_dto.py  slot_entity.py  slot_repository.py  slot_router.py  slot_service.py  slot_utils.py
src/modules/user/: __init__.py  user_dto.py  user_entity.py  user_repository.py  user_router.py  user_service.py  user_utils.py
src/shared/: __init__.py  errors.py
src/shared/errors/: __init__.py  errors_classes.py  errors_utils.py
tests/: __init__.py  conftest.py  test_example.py
tests/src/core/database/: test_database_router.py
tests/src/modules/booking/: test_get_booking_is_not_exist_error_message.py
tests/src/modules/room/: test_get_room_is_not_exist_error_message.py
tests/src/modules/slot/: test_get_slot_is_not_exist_error_message.py
tests/src/modules/user/: test_get_user_is_not_exist_error_message.py
tests/src/shared/errors/: test_create_message_from_validation_error.py
