[project]
name = "backend-learning-shifttest"
version = "0.1.0"
description = "Python Backend test app for Shift event"
authors = [ {name = "Romeo",email = "romqaaa1337@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic (==1.18.4)",
    "fastapi (==0.136.3)",
    "pydantic (==2.13.4)",
    "sqlalchemy (==2.0.50)",
    "pydantic-settings (==2.14.1)",
    "uvicorn (==0.48.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (==26.5.1)",
    "isort (==8.0.1)",
    "flake8 (==7.3.0)",
    "mypy (==2.1.0)",
    "pre-commit (==4.6.0)",
]
test = [
    "pytest (==9.0.3)",
    "pytest-cov (==7.1.0)",
]
docs = [
    "interrogate (==1.7.0)",
    "sphinx (==8.2.3)",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]

[tool.interrogate]
color = true
exclude = ["docs"]
fail-under = 50
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-module = false
ignore-nested-classes = true
ignore-nested-functions = true
ignore-overloaded-functions = true
ignore-private = true
ignore-property-decorators = true
ignore-semiprivate = true
ignore-setters = true
style = "sphinx"
verbose = 1
