[project]
name = "backend-learning-shift_test"
version = "0.1.0"
description = "Python Backend app for Shift event"
authors = [ { name = "Romeo", email = "romqaaa1337@gmail.com" } ]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic (==1.18.4)",
    "fastapi (==0.136.3)",
    "pydantic (==2.13.4)",
    "pydantic-settings (==2.14.1)",
    "sqlalchemy (==2.0.50)",
    "uvicorn (==0.48.0)",
    "psycopg[binary] (==3.3.4)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (==26.5.1)",
    "flake8 (==7.3.0)",
    "isort (==8.0.1)",
    "mypy (==2.1.0)",
    "pre-commit (==4.6.0)",
]
test = [
    "pytest (==9.0.3)",
    "pytest-cov (==7.1.0)",
]
docs = [
    "interrogate (==1.7.0)",
    "sphinx (==8.2.3)",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
files = ["src/", "tests/"]
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = false

[tool.isort]
profile = "black"
src_paths = ["src/", "tests/"]

[tool.interrogate]
color = true
exclude = ["docs"]
fail-under = 50
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-module = false
ignore-nested-classes = true
ignore-nested-functions = true
ignore-overloaded-functions = true
ignore-private = true
ignore-property-decorators = true
ignore-semiprivate = true
ignore-setters = true
style = "sphinx"
verbose = 2

[tool.pytest]
python_files = ["test_*.py"]
testpaths = ["tests/"]
